# redseat_rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  PLUGIN.md  README.md  build.rs  foo.txt
.claude/: settings.local.json
.cursor/plans/: face-recognition-system-ae2da667.plan.md
.github/workflows/: builder.yml  docker.yml
.redseat/settings/: trakt_movie_refresh.txt
docs/: SSE.md
src/: certificate.rs  error.rs  main.rs  server.rs
src/daemon/: log.rs  main.rs
src/domain/: backup.rs  book.rs  channel.rs  credential.rs  deleted.rs  episode.rs  ffmpeg.rs  file.rs  library.rs  media.rs  media_progress.rs  media_rating.rs  mod.rs  movie.rs  people.rs  player.rs  plugin.rs  plugin_convert_queue.rs  progress.rs  request_processing.rs  rs_link.rs  serie.rs  tag.rs  view_progress.rs  watched.rs
src/model/: AGENTS.md  backups.rs  books.rs  channels.rs  credentials.rs  deleted.rs  entity_images.rs  entity_search.rs  episodes.rs  error.rs  libraries.rs  media_progresses.rs  media_ratings.rs  medias.rs  mod.rs  movies.rs  people.rs  player.rs  plugins.rs  series.rs  server.rs  store.rs  tags.rs  users.rs
src/model/SQL/: 001 - INITIAL.sql
src/model/plugins/: mod.rs  video_convert_plugin.rs
src/model/store/sql/: 001 - INITIAL.sql  003 - AI MODELS.sql  004 - SHARE OPTIONS.sql  005 - BACKUP PLUGIN.sql  006 - BACKUP ERRORS.sql  007 - PLUGIN REPO.sql  008 - LIBRARY PASSWORD.sql  009 - PLUGIN PARAMS.sql  010 - UPLOAD KEY PEOPLE.sql  011 - PLUGIN CONVERT QUEUE.sql  backups.rs  credentials.rs  libraries.rs  mod.rs  plugin_convert_queue.rs  plugins.rs  users.rs
src/plugins/: error.rs  mod.rs  provider.rs  token.rs  url.rs
src/plugins/medias/: mod.rs  trakt.rs
src/plugins/medias/fanart/: mod.rs
src/plugins/medias/imdb/: mod.rs
src/plugins/medias/tmdb/: mod.rs  tmdb_configuration.rs  tmdb_image.rs
src/plugins/medias/trakt/: mod.rs  trakt_episode.rs  trakt_movie.rs  trakt_people.rs  trakt_show.rs
src/plugins/sources/: async_reader_progress.rs  error.rs  mod.rs  path_provider.rs  plugin_provider.rs  virtual_provider.rs
src/routes/: backups.rs  books.rs  channels.rs  credentials.rs  episodes.rs  infos.rs  libraries.rs  library_plugins.rs  medias.rs  mod.rs  movies.rs  mw_auth.rs  mw_range.rs  people.rs  ping.rs  plugins.rs  search.rs  series.rs  socket.rs  sse.rs  tags.rs  upload_keys.rs  users.rs
src/tools/: CLAUDE.md  array_tools.rs  auth.rs  clock.rs  compression.rs  download_external_libs.rs  encryption.rs  file_tools.rs  hls_session.rs  http_tools.rs  image_tools.rs  log.rs  m3u_parser.rs  media_hls_session.rs  mod.rs  prediction.rs  pubkey.pem  recognition.rs  serialization.rs  serialization_tools.rs  test_sample.rs  text_tools.rs  video_tools.rs  zip_range.rs
src/tools/convert/: heic.rs  jxl.rs  mod.rs  raw.rs
src/tools/image_tools/: image_magick.rs
src/tools/scheduler/: backup.rs  encrypt_library.rs  face_recognition.rs  ip.rs  iptv_refresh.rs  mod.rs  refresh.rs  request_progress.rs  series.rs
src/tools/video_tools/: ytdl.rs
src/tools/video_tools/ytdl/: ytdl_model.rs
test_data/: image.avif
