[package]
name = "redseat-rust"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = {version = "0.7", features = ["query", "macros", "multipart"]}
axum-server = { version = "0.6", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors","trace", "normalize-path", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
nanoid = "0.4.0"
http-body-util = "0.1.0"
hyper = { version = "1.0.0", features = ["full"] }
mime = "0.3"

jsonwebtoken = "9"
tower = "0.4"
dirs = "5.0.1"
clap = { version = "4.4.18", features = ["derive"] }
lazy_static = "1.4.0"
rsa = "0.9.6"
rand = "0.8.5"
instant-acme = "0.4.2"
rcgen = "0.12.1"
x509-parser = "0.16.0"
chrono = { version = "0.4.33", features = ["serde"]}
reqwest = { version = "0.12.3", features = ["stream", "gzip"]}
query_external_ip = "0.1.1"
axum-server-dual-protocol = "0.6.0"

rusqlite = { version = "0.31", features = ["bundled","serde_json"] }
tokio-rusqlite = "0.5.1"
bytes = "1.5.0"
derive_more = "0.99.17"
strum_macros = "0.26.1"
tokio-util = { version = "0.7.10", features = ["compat"] }
time = "0.3.34"
tokio-stream = { version = "0.1.14", features = ["io-util"] }
image = { version = "0.24" , features = ["avif", "avif-encoder"]}
socketioxide = { version = "0.13.1", features = ["extensions","state", "v4"] }
async-trait = "0.1.77"
mime_guess = "2.0.4"
webp = "0.2.6"
which = "6.0.0"
strum = "0.26.1"
futures = "0.3.30"

ndarray = "0.15.6"
ort = "2.0.0-rc.1"
sha256 = "1.5.0"
axum-extra = { version = "0.9.2", features = ["query"] }
http = "1.1.0"
extism = "1.2.0"
rs-plugin-common-interfaces = { version = "0.13.13", features = ["rusqlite",] }
async-recursion = "1.1.0"
async-compression = { version = "0.4.6", features = ["tokio"] }
youtube_dl = { version = "0.10.0", features = ["tokio", "downloader-rustls-tls"] }
stream-map-any = "0.2.2"
human_bytes = "0.4.3"
regex = "1.10.4"
unidecode = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zip = "2.1.3"
async_zip = { version = "0.0.17", features = ["full"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
serial_test = "*"
